--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">mp3player</string>
     <string name="drawer_open">DrawerLayout Open</string>
     <string name="drawer_close">DrawerLayout Close</string>
+    <string name="appbar_scrolling_view_behavior" translatable="false">
+        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
+    </string>
 </resources>
